--- a/login.html
+++ b/login.html
@@ -95,7 +95,7 @@
       const token = localStorage.getItem('adminToken');
       if (token) {
         // Verify token validity with server
-        fetch('/api/auth/verify', {
+        fetch('/api/verify', {
           headers: {
             'Authorization': `Bearer ${token}`
           }
@@ -153,7 +153,7 @@
       loginButton.textContent = 'Logging in...';
       
       // Send login request to server
-      fetch('/api/auth/login', {
+      fetch('/api/login', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
