--- a/admin.html
+++ b/admin.html
@@ -356,7 +356,7 @@
       button.disabled = true;
   
       try {
-        const res = await fetch('http://localhost:3000/api/add-match', {
+        const res = await fetch('/api/add-match', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ hltvUrl: urlInput.value })
