--- a/admin.html
+++ b/admin.html
@@ -158,7 +158,10 @@
   <div class="container">
     <div style="display: flex; justify-content: space-between; align-items: center;">
       <h1>CS Match Tracker – Admin Panel</h1>
-      <button onclick="logout()" style="background-color: #f44336; color: white; padding: 8px 16px; border: none; border-radius: 4px; cursor: pointer;">Logout</button>
+      <div>
+        <a href="/db-viewer" style="background-color: #2196F3; color: white; padding: 8px 16px; border: none; border-radius: 4px; cursor: pointer; text-decoration: none; margin-right: 10px;">Database Viewer</a>
+        <button onclick="logout()" style="background-color: #f44336; color: white; padding: 8px 16px; border: none; border-radius: 4px; cursor: pointer;">Logout</button>
+      </div>
     </div>
 
     <!-- 1. Add Match via HLTV URL -->
